# powerbaseOS

./: .env.example  .gitignore  docker-compose.yml  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: db.py  logging.py  security.py  settings.py
apps/api/app/models/: __init__.py  event.py  facility.py  floorplan.py  job.py  rack.py  side.py  timeslot.py  user.py
apps/api/app/routes/: auth.py  events.py  facilities.py  floorplans.py  health.py  kiosk.py  racks.py  sides.py  timeslots.py
apps/api/app/schemas/: event.py  facility.py  rack.py  side.py  timeslot.py  user.py
apps/api/app/scripts/: seed_dev_data.py  seed_rbac.py
apps/api/app/services/: events.py  facilities.py  floorplans.py  racks.py  timeslots.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 009191825654_initial_domain.py  06567529d71c_floorplans_table.py  6701bebce245_events_and_jobs_tables.py  67b0cf70d5d9_rbac_tables.py  6fd9db356b06_merge_heads.py  abaca2de82f3_initial_domain.py  ba0d5e7d9673_rbac_tables.py  d5fa5364d20e_events_and_jobs_tables.py  f11abc7079a3_floorplan_table.py  f9ae732ac2ef_baseline.py
apps/web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AttentionPanel.tsx  KPITile.tsx  Nav.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts
apps/worker/: pyproject.toml
apps/worker/worker/: __init__.py
docs/: README.md  architecture.md  runbook.md
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
(+19 files in other folders)
