[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "boto3>=1.40.40",
    "celery[redis]>=5.5.3",
    "fastapi>=0.118.0",
    "loguru>=0.7.3",
    "minio>=7.2.17",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sentry-sdk>=2.39.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "uvicorn[standard]>=0.37.0",
]
