[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.40.40",
    "celery[redis]>=5.5.3",
    "loguru>=0.7.3",
    "minio>=7.2.17",
    "redis>=5.2.1",
    "sentry-sdk>=2.39.0",
    "sqlalchemy>=2.0.43",
]
